[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/player/FPSPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/supermarket/Supermarket.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Level.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/dialog/Dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/UIIntro.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/menu/GameMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GroceryList.tscn" type="PackedScene" id=8]

[sub_resource type="ProceduralSky" id=2]
sun_energy = 0.0

[sub_resource type="Environment" id=1]
background_mode = 1
background_sky = SubResource( 2 )
background_color = Color( 0.623529, 0.623529, 0.623529, 1 )
background_energy = 0.0
ambient_light_color = Color( 0.933333, 0.933333, 0.933333, 1 )
ambient_light_energy = 0.8
fog_enabled = true
fog_sun_amount = 0.08
tonemap_mode = 2
ssao_enabled = true
ssao_radius = 0.2
ssao_bias = 0.001

[node name="Level" type="Spatial"]
script = ExtResource( 3 )

[node name="Supermarket" parent="." instance=ExtResource( 2 )]

[node name="FPSPlayer" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.39283 )

[node name="GroceryList" parent="FPSPlayer/Head/Camera/Hand" index="0" instance=ExtResource( 8 )]
transform = Transform( 1, -3.72529e-09, 0, -1.11759e-08, 1, 1.49012e-08, 1.49012e-08, 4.47035e-08, 1, 0, 0.0327951, 0.00549519 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 0.96006, 5.07725e-09, -0.279795, 0.267821, 0.289416, 0.918972, 0.0809773, -0.957203, 0.277857, 0, 3.31566, 0 )
light_color = Color( 0.717647, 0.905882, 0.92549, 1 )
light_energy = 0.5
shadow_color = Color( 0.407843, 0.407843, 0.403922, 1 )

[node name="Dialog" parent="." instance=ExtResource( 4 )]
visible = false

[node name="UIIntro" parent="." instance=ExtResource( 5 )]

[node name="GameMenu" parent="." instance=ExtResource( 6 )]
pause_mode = 2

[connection signal="announce_dialog_ended" from="Supermarket" to="." method="_on_Supermarket_announce_dialog_ended"]
[connection signal="announce_dialog_started" from="Supermarket" to="." method="_on_Supermarket_announce_dialog_started"]
[connection signal="player_checkout" from="Supermarket" to="." method="_on_Supermarket_player_checkout"]
[connection signal="supermarket_generated" from="Supermarket" to="." method="_on_Supermarket_supermarket_generated"]
[connection signal="interact_exited" from="FPSPlayer" to="." method="_on_FPSPlayer_interact_exited"]
[connection signal="interact_hovered" from="FPSPlayer" to="." method="_on_FPSPlayer_interact_hovered"]
[connection signal="all_items_picked_up" from="FPSPlayer/Head/Camera/Hand/GroceryList" to="." method="_on_GroceryList_all_items_picked_up"]
[connection signal="faded_out" from="UIIntro" to="." method="_on_UIIntro_faded_out"]
[connection signal="next_level_requested" from="UIIntro" to="." method="_on_UIIntro_next_level_requested"]
[connection signal="quit_game_requested" from="GameMenu" to="." method="_on_GameMenu_quit_game_requested"]
[connection signal="resume_game_requested" from="GameMenu" to="." method="_on_GameMenu_resume_game_requested"]

[editable path="FPSPlayer"]
